src/main/bkit/parser/.antlr/BKITParser.py
# Generated from /home/duchuy/Documents/bachkhoa/PPL/Assignment/ass3/initial/src/main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Body'", "'Break'", "'Continue'", 
                     "'Do'", "'Else'", "'ElseIf'", "'EndBody'", "'EndIf'", 
                     "'EndFor'", "'EndWhile'", "'For'", "'Function'", "'If'", 
                     "'Parameter'", "'Return'", "'Then'", "'Var'", "'While'", 
                     "'True'", "'False'", "'EndDo'", "'='", "'+'", "'+.'", 
                     "'-'", "'-.'", "'*'", "'*.'", "'\\'", "'\\.'", "'%'", 
                     "'!'", "'||'", "'&&'", "'=='", "'!='", "'=/='", "'<'", 
                     "'<.'", "'>'", "'>.'", "'<='", "'<=.'", "'>='", "'>=.'", 
                     "'('", "')'", "'['", "']'", "':'", "'.'", "','", "';'", 
                     "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "ID", "BODY", "BREAK", "CONTINUE", "DO", 
                      "ELSE", "ELSEIF", "ENDBODY", "ENDIF", "ENDFOR", "ENDWHILE", 
                      "FOR", "FUNCTION", "IF", "PARAMETER", "RETURN", "THEN", 
                      "VAR", "WHILE", "TRUE", "FALSE", "ENDDO", "ASSIGN", 
                      "ADDOP", "ADDOPDOT", "SUBOP", "SUBOPDOT", "MULOP", 
                      "MULOPDOT", "DIVOP", "DIVOPDOT", "MODOP", "NOTOP", 
                      "OROP", "ANDOP", "EQUALOP", "NOTEQUALOP", "NOTEQUALOPFLOAT", 
                      "LESSOP", "LESSOPDOT", "GREATEROP", "GREATEROPDOT", 
                      "LESSOREQUALOP", "LESSOREQUALOPDOT", "GREATEOREQUALOP", 
                      "GREATEOREQUALOPDOT", "LB", "RB", "LSB", "RSB", "COLON", 
                      "DOT", "COMMA", "SEMI", "LP", "RP", "INTLIT", "FLOATLIT", 
                      "STRINGLIT", "WS", "COMMENT", "ERROR_CHAR", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "UNTERMINATED_COMMENT" ]

    RULE_program = 0
    RULE_many_declare = 1
    RULE_var_declare_list = 2
    RULE_func_declare_list = 3
    RULE_var_declare = 4
    RULE_ids_list = 5
    RULE_id_declare = 6
    RULE_array_declares = 7
    RULE_array = 8
    RULE_array_id = 9
    RULE_type_list = 10
    RULE_func_declare = 11
    RULE_header_stm = 12
    RULE_paramater_stm = 13
    RULE_paramater_list = 14
    RULE_body_stm = 15
    RULE_statement_list = 16
    RULE_statement = 17
    RULE_assign_statement = 18
    RULE_if_statement = 19
    RULE_if_then_statement = 20
    RULE_else_if_statements = 21
    RULE_else_if_statement = 22
    RULE_else_statement = 23
    RULE_for_statement = 24
    RULE_for_condition = 25
    RULE_while_statement = 26
    RULE_do_while_statement = 27
    RULE_break_statement = 28
    RULE_continue_statement = 29
    RULE_function_call_statement = 30
    RULE_return_statement = 31
    RULE_expressions = 32
    RULE_exp1 = 33
    RULE_exp2 = 34
    RULE_exp3 = 35
    RULE_exp4 = 36
    RULE_exp5 = 37
    RULE_exp6 = 38
    RULE_operand = 39
    RULE_sub_expression = 40
    RULE_function_call = 41
    RULE_list_expression = 42
    RULE_index_operator = 43
    RULE_list_index = 44
    RULE_index = 45
    RULE_array_lit = 46
    RULE_array_lits = 47

    ruleNames =  [ "program", "many_declare", "var_declare_list", "func_declare_list", 
                   "var_declare", "ids_list", "id_declare", "array_declares", 
                   "array", "array_id", "type_list", "func_declare", "header_stm", 
                   "paramater_stm", "paramater_list", "body_stm", "statement_list", 
                   "statement", "assign_statement", "if_statement", "if_then_statement", 
                   "else_if_statements", "else_if_statement", "else_statement", 
                   "for_statement", "for_condition", "while_statement", 
                   "do_while_statement", "break_statement", "continue_statement", 
                   "function_call_statement", "return_statement", "expressions", 
                   "exp1", "exp2", "exp3", "exp4", "exp5", "exp6", "operand", 
                   "sub_expression", "function_call", "list_expression", 
                   "index_operator", "list_index", "index", "array_lit", 
                   "array_lits" ]

    EOF = Token.EOF
    ID=1
    BODY=2
    BREAK=3
    CONTINUE=4
    DO=5
    ELSE=6
    ELSEIF=7
    ENDBODY=8
    ENDIF=9
    ENDFOR=10
    ENDWHILE=11
    FOR=12
    FUNCTION=13
    IF=14
    PARAMETER=15
    RETURN=16
    THEN=17
    VAR=18
    WHILE=19
    TRUE=20
    FALSE=21
    ENDDO=22
    ASSIGN=23
    ADDOP=24
    ADDOPDOT=25
    SUBOP=26
    SUBOPDOT=27
    MULOP=28
    MULOPDOT=29
    DIVOP=30
    DIVOPDOT=31
    MODOP=32
    NOTOP=33
    OROP=34
    ANDOP=35
    EQUALOP=36
    NOTEQUALOP=37
    NOTEQUALOPFLOAT=38
    LESSOP=39
    LESSOPDOT=40
    GREATEROP=41
    GREATEROPDOT=42
    LESSOREQUALOP=43
    LESSOREQUALOPDOT=44
    GREATEOREQUALOP=45
    GREATEOREQUALOPDOT=46
    LB=47
    RB=48
    LSB=49
    RSB=50
    COLON=51
    DOT=52
    COMMA=53
    SEMI=54
    LP=55
    RP=56
    INTLIT=57
    FLOATLIT=58
    STRINGLIT=59
    WS=60
    COMMENT=61
    ERROR_CHAR=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64
    UNTERMINATED_COMMENT=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def many_declare(self):
            return self.getTypedRuleContext(BKITParser.Many_declareContext,0)


        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.many_declare()
            self.state = 97
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Many_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare_list(self):
            return self.getTypedRuleContext(BKITParser.Var_declare_listContext,0)


        def func_declare_list(self):
            return self.getTypedRuleContext(BKITParser.Func_declare_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_many_declare




    def many_declare(self):

        localctx = BKITParser.Many_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_many_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.VAR:
                self.state = 99
                self.var_declare_list()


            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.FUNCTION:
                self.state = 102
                self.func_declare_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declare_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declare(self):
            return self.getTypedRuleContext(BKITParser.Var_declareContext,0)


        def var_declare_list(self):
            return self.getTypedRuleContext(BKITParser.Var_declare_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_var_declare_list




    def var_declare_list(self):

        localctx = BKITParser.Var_declare_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_var_declare_list)
        try:
            self.state = 109
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.var_declare()
                self.state = 106
                self.var_declare_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.var_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declare_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_declare(self):
            return self.getTypedRuleContext(BKITParser.Func_declareContext,0)


        def func_declare_list(self):
            return self.getTypedRuleContext(BKITParser.Func_declare_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declare_list




    def func_declare_list(self):

        localctx = BKITParser.Func_declare_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_func_declare_list)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.func_declare()
                self.state = 112
                self.func_declare_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.func_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(BKITParser.VAR, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ids_list(self):
            return self.getTypedRuleContext(BKITParser.Ids_listContext,0)


        def SEMI(self):
            return self.getToken(BKITParser.SEMI, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_var_declare




    def var_declare(self):

        localctx = BKITParser.Var_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_var_declare)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(BKITParser.VAR)
            self.state = 118
            self.match(BKITParser.COLON)
            self.state = 119
            self.ids_list()
            self.state = 120
            self.match(BKITParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ids_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def id_declare(self):
            return self.getTypedRuleContext(BKITParser.Id_declareContext,0)


        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def ids_list(self):
            return self.getTypedRuleContext(BKITParser.Ids_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_ids_list




    def ids_list(self):

        localctx = BKITParser.Ids_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ids_list)
        try:
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.id_declare()

                self.state = 123
                self.match(BKITParser.COMMA)
                self.state = 124
                self.ids_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 126
                self.id_declare()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def array_declares(self):
            return self.getTypedRuleContext(BKITParser.Array_declaresContext,0)


        def ASSIGN(self):
            return self.getToken(BKITParser.ASSIGN, 0)

        def type_list(self):
            return self.getTypedRuleContext(BKITParser.Type_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_id_declare




    def id_declare(self):

        localctx = BKITParser.Id_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_id_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(BKITParser.ID)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.LSB:
                self.state = 130
                self.array_declares()


            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.ASSIGN:
                self.state = 133
                self.match(BKITParser.ASSIGN)
                self.state = 134
                self.type_list()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_declaresContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array(self):
            return self.getTypedRuleContext(BKITParser.ArrayContext,0)


        def array_declares(self):
            return self.getTypedRuleContext(BKITParser.Array_declaresContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_array_declares




    def array_declares(self):

        localctx = BKITParser.Array_declaresContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_array_declares)
        try:
            self.state = 141
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.array()

                self.state = 138
                self.array_declares()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.array()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrayContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LSB(self):
            return self.getToken(BKITParser.LSB, 0)

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def RSB(self):
            return self.getToken(BKITParser.RSB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_array




    def array(self):

        localctx = BKITParser.ArrayContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_array)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(BKITParser.LSB)
            self.state = 144
            self.match(BKITParser.INTLIT)
            self.state = 145
            self.match(BKITParser.RSB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Array_idContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_index(self):
            return self.getTypedRuleContext(BKITParser.List_indexContext,0)


        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def function_call(self):
            return self.getTypedRuleContext(BKITParser.Function_callContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_array_id




    def array_id(self):

        localctx = BKITParser.Array_idContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_array_id)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 147
                self.match(BKITParser.ID)
                pass

            elif la_ == 2:
                self.state = 148
                self.function_call()
                pass


            self.state = 151
            self.list_index()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Type_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(BKITParser.INTLIT, 0)

        def FLOATLIT(self):
            return self.getToken(BKITParser.FLOATLIT, 0)

        def TRUE(self):
            return self.getToken(BKITParser.TRUE, 0)

        def FALSE(self):
            return self.getToken(BKITParser.FALSE, 0)

        def STRINGLIT(self):
            return self.getToken(BKITParser.STRINGLIT, 0)

        def array_lit(self):
            return self.getTypedRuleContext(BKITParser.Array_litContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_type_list




    def type_list(self):

        localctx = BKITParser.Type_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_type_list)
        try:
            self.state = 159
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.INTLIT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 153
                self.match(BKITParser.INTLIT)
                pass
            elif token in [BKITParser.FLOATLIT]:
                self.enterOuterAlt(localctx, 2)
                self.state = 154
                self.match(BKITParser.FLOATLIT)
                pass
            elif token in [BKITParser.TRUE]:
                self.enterOuterAlt(localctx, 3)
                self.state = 155
                self.match(BKITParser.TRUE)
                pass
            elif token in [BKITParser.FALSE]:
                self.enterOuterAlt(localctx, 4)
                self.state = 156
                self.match(BKITParser.FALSE)
                pass
            elif token in [BKITParser.STRINGLIT]:
                self.enterOuterAlt(localctx, 5)
                self.state = 157
                self.match(BKITParser.STRINGLIT)
                pass
            elif token in [BKITParser.LP]:
                self.enterOuterAlt(localctx, 6)
                self.state = 158
                self.array_lit()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declareContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def header_stm(self):
            return self.getTypedRuleContext(BKITParser.Header_stmContext,0)


        def body_stm(self):
            return self.getTypedRuleContext(BKITParser.Body_stmContext,0)


        def paramater_stm(self):
            return self.getTypedRuleContext(BKITParser.Paramater_stmContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_func_declare




    def func_declare(self):

        localctx = BKITParser.Func_declareContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_func_declare)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self.header_stm()
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 162
                self.paramater_stm()


            self.state = 165
            self.body_stm()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Header_stmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ID(self):
            return self.getToken(BKITParser.ID, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_header_stm




    def header_stm(self):

        localctx = BKITParser.Header_stmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_header_stm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(BKITParser.FUNCTION)
            self.state = 168
            self.match(BKITParser.COLON)
            self.state = 169
            self.match(BKITParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Paramater_stmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def paramater_list(self):
            return self.getTypedRuleContext(BKITParser.Paramater_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_paramater_stm




    def paramater_stm(self):

        localctx = BKITParser.Paramater_stmContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_paramater_stm)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(BKITParser.PARAMETER)
            self.state = 172
            self.match(BKITParser.COLON)
            self.state = 173
            self.paramater_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Paramater_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ids_list(self):
            return self.getTypedRuleContext(BKITParser.Ids_listContext,0)


        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def paramater_list(self):
            return self.getTypedRuleContext(BKITParser.Paramater_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_paramater_list




    def paramater_list(self):

        localctx = BKITParser.Paramater_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_paramater_list)
        try:
            self.state = 180
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 175
                self.ids_list()

                self.state = 176
                self.match(BKITParser.COMMA)
                self.state = 177
                self.paramater_list()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 179
                self.ids_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Body_stmContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def var_declare_list(self):
            return self.getTypedRuleContext(BKITParser.Var_declare_listContext,0)


        def statement_list(self):
            return self.getTypedRuleContext(BKITParser.Statement_listContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_body_stm




    def body_stm(self):
